--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 
 <h1>Discover hidden places in the world around you</h1>
 
-<p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank"> Download Excursion (Coming Soon!)</a></p>
+<p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
+
+<p> <video autoplay muted loop src= "./resources/videos/video.mp4" type="video/mp4"> Video not supported </video> </p>
+
+<h2>Your personal travel guide</h2>
+
+<p class= "gray">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+<p> <img src="./resources/images/camp.jpg" /> </p>
+<div>
+<p> <img src="./resources/images/phone.png" /> </p>
+
+<h2>Coming Soon for iPhone and Android</h2>
+
+<p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
+
 
 </body>
 
