--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
   <title>excursion</title>
@@ -9,24 +10,31 @@
 
 <body>
 
-<h1>Discover hidden places in the world around you</h1>
-
-<p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
-
-<p> <video autoplay muted loop src= "./resources/videos/video.mp4" type="video/mp4"> Video not supported </video> </p>
-
-<h2>Your personal travel guide</h2>
-
-<p class= "gray">Excursion remembers places you like, and recommends new points of interest around you.</p>
-
-<p> <img src="./resources/images/camp.jpg" /> </p>
+<! --"Main Section" -->
 <div>
-<p> <img src="./resources/images/phone.png" /> </p>
+  <h1>Discover hidden places in the world around you</h1>
+  <p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
+  <p> <video autoplay muted loop src= "./resources/videos/video.mp4" type="video/mp4"> Video not supported </video> </p>
+</div>
 
-<h2>Coming Soon for iPhone and Android</h2>
+<! --First Section-->
+<div>
+  <h2>Your personal travel guide</h2>
+  <p class= "gray">Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p> <img src="./resources/images/camp.jpg" /> </p>
+</div>
 
-<p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
+<! --Second Section-->
+<div>
+  <p> <img src="./resources/images/phone.png" /> </p>
+  <h2>Coming Soon for iPhone and Android</h2>
+  <p><a href="https://9rcbuq9oe3jmo7lps9ko8kt7ev7dkljjpankofkugk33qhiis51g.codecademy.cloud/#" target="_blank" style="color: Aquamarine"> Download Excursion (Coming Soon!)</a></p>
+</div>
 
+<! --Footer-->
+<div>
+  <p class= "gray right"> © Excursion </p>
+</div>
 
 </body>
 
